# Claudy

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: BUILDING.md
docs/superpowers/plans/: 2026-07-12-phase-1-scaffold-shell.md  2026-07-12-phase-2-audio-stt.md  2026-07-13-phase-3-dictation-e2e.md  2026-07-14-phase-4-ai-layer.md  2026-07-16-phase-5-management-ui.md  2026-07-17-phase-6-polish.md  2026-07-18-phase-7-voice-assistant.md
docs/superpowers/specs/: 2026-07-12-claudy-ai-assistant-design.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.bundle.windows.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assistant.rs  audio.rs  config.rs  dictation.rs  download.rs  inject.rs  lib.rs  main.rs  models.rs  notify.rs  overlay.rs  prompt_flow.rs  prompts.rs  secrets.rs  selection.rs  shortcuts.rs  stt.rs  tray.rs
src-tauri/src/ai/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai_compatible.rs
src-tauri/src/tts/: kokoro.rs  mod.rs  playback.rs
src/components/: app-sidebar.tsx  prompt-editor.tsx  shortcut-input.tsx  theme-provider.tsx  toggle-row.tsx
src/lib/: accelerator.test.ts  accelerator.ts  ai-api.ts  assistant-api.ts  dictation-api.ts  image-attach.test.ts  image-attach.ts  insert-at-cursor.test.ts  insert-at-cursor.ts  settings-store.ts  shortcuts-api.ts  stt-api.ts  use-mic-transcription.ts
src/pages/: AssistantSettingsPage.tsx  PromptsPage.tsx  ProvidersPage.tsx  SettingsPage.tsx  TranscriptionPage.tsx
src/windows/: AssistantPage.tsx  MainApp.tsx  OverlayPage.tsx
(+8 files in other folders)
