[package]
name = "claudy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claudy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2.4.2"
whisper-rs = "0.16"
# 0.18.1 mixes windows-core 0.61/0.62 and fails to compile on Windows
cpal = "0.17"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "time"] }
futures-util = "0.3"
sha1 = "0.11"
hex = "0.4"
enigo = "0.6"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["macros", "rt"] }

